--- a/basketball.css
+++ b/basketball.css
@@ -1,94 +1,149 @@
 body {
-    margin: 0;
-    background: black;
+  margin: 0%;
 }
+.outerBorder {
+  width: 575px;
+  height: 385px;
+  background: #1b244a;
+  margin-top: 50px;
+  margin: auto;
+  margin-top: 100px;
+  border: 5px double brown;
+  border-radius: 20px;
+}
+.outerBorder .titles {
+  display: flex;
+}
+.outerBorder .titles #home {
+  width: 149px;
+  height: 36px;
+  margin-top: 68px;
+  margin-left: 85px;
 
-.container {
-   width: 575px;
-height: 385px;
-    padding-top: 68px;
-    padding-bottom: 69px;
-    padding-left: 82px;
-    padding-right: 83px;
-background: #1B244A;
-border: 3px solid #EEEEEE;
-border-radius: 10px 10px 10px 10px;
+  font-family: "Verdana";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 36px;
+  /* identical to box height, or 90% */
+  text-align: center;
+  color: #eeeeee;
+  margin-bottom: 0;
 }
-.container .fakebody{margin-left: 82px;
-                       
-                            }
-.container .row1 {display: flex
-}
-.container .row2 {display: flex}
-.container h3{width: 149px;
-height: 36px;
-top: 68px;
-font-family: 'Verdana';
-font-style: normal;
-font-weight: 700;
-font-size: 40px;
-line-height: 36px;
-text-align: center;
+.outerBorder .titles #away {
+  width: 149px;
+  height: 36px;
+  margin-top: 68px;
+  margin-left: 115px;
 
-color: #EEEEEE;
+  font-family: "Verdana";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 36px;
+  /* identical to box height, or 90% */
+  text-align: center;
+  margin-bottom: 0%;
+  color: #eeeeee;
 }
-.home h3{left:85px;
-margin-right: 106px }
-.guest h3{left:340px;}
-.container .scorebrd1{
-    width: 155px;
-height: 120px;
-left: 82px;
-top: 125px;
-background: black;
+.outerBorder .displayBoard {
+  width: 420px;
+  height: 120px;
+  margin-top: 21px;
+  margin-left: 82px;
+  background: #1b244a;
+  display: flex;
 }
-#scorebrd1{margin-right:100px }
-.container .row2 .scorebrd1 h4{
- position: absolute;
-width: 117px;
-height: 120px;
-left: 100px;
-top: 70px;
-margin-left: 80px;
-font-family: 'Cursed Timer ULiL';
+.outerBorder .displayBoard .displayOne {
+  width: 155px;
+  height: 120px;
+  background: black;
+  border-radius: 10px 10px 10px 10px;
+  border: 2px double white;
+}
+.outerBorder .displayBoard .displayOne h5 {
+  text-align: center;
+  margin: 0%;
+  font-family: "Cursed Timer ULiL";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 90px;
+  line-height: 120px;
+  color: #38BDF8;
+}
+.outerBorder .displayBoard .displayTwo {
+  width: 155px;
+  height: 120px;
+  background: black;
+  border-radius: 10px 10px 10px 10px;
+  border: 2px double white;
+  margin-left: 110px;
+}
+.outerBorder .displayBoard .displayTwo h5 {
+  text-align: center;
+  margin: 0%;
+  font-family: "Cursed Timer ULiL";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 90px;
+  line-height: 120px;
+  color: #38BDF8;
+}
+.outerBorder .boxes {
+  width: 410px;
+  height: 45px;
+  margin-top: 26px;
+  margin-bottom: 0%;
+  margin-left: 82px;
+  background: #1b244a;
+  display: flex;
+}
+.outerBorder .boxes .set1 {
+  display: flex;
+}
+.outerBorder .boxes .set1 button {
+  width: 45px;
+  height: 45px;
+  margin-right: 9px;
+  background: #1b244a;
+  border-style: none;
+
+  border: 2px solid #9aabd8;
+  border-radius: 5px;
+  font-family: 'Cursed Timer ULiL';
 font-style: normal;
 font-weight: 400;
-font-size: 90px;
-line-height: 127px;
+font-size: 18px;
+line-height: 28px;
+/* or 155% */
+
 text-align: center;
-color: #F94F6D;
-  
+
+color: #9AABD8;
+
 }
-.container .scorebrd2{
-    width: 155px;
-height: 120px;
-left: 82px;
-top: 125px;
-background: black;
+.outerBorder .boxes .set2 {
+  display: flex;
+  margin-left: 100px;
 }
-.container .row2 .scorebrd2 h4{
- position: absolute;
-width: 117px;
-height: 120px;
-left: 360px;
-top: 70px;
-margin-left: 80px;
-font-family: 'Cursed Timer ULiL';
+.outerBorder .boxes .set2 button {
+  width: 45px;
+  height: 45px;
+  margin-right: 9px;
+  background: #1b244a;
+  border-style: none;
+
+  border: 2px solid #9aabd8;
+  border-radius: 5px;
+  font-family: 'Cursed Timer ULiL';
 font-style: normal;
 font-weight: 400;
-font-size: 90px;
-line-height: 127px;
+font-size: 18px;
+line-height: 28px;
+/* or 155% */
+
 text-align: center;
-color: #F94F6D;
-  
-}
-.container .row31{display: flex;
-margin-top: 30px;
-}
-.container .row31 button{margin-right: 25px;
-}
-.container .row32{
-margin-left: 250px;
-}
-.container .row32 button{margin-right: 25px;
+
+color: #9AABD8;
+
 }
